resolved layout issue that caused the lists to be wider than the map container.

--- a/bpz/static/css/bpz.css
+++ b/bpz/static/css/bpz.css
@@ -13,7 +13,14 @@ body {
 ul#case-list {
   overflow:scroll;
   top:'300px';
+}
 
+ul#case-list > li:hover {
+	background-color: #f5f5f5;
+}
+
+ul#case-list > li:active {
+	
 }
 
 #btn-neighborhood {
@@ -30,5 +37,8 @@ ul#case-list {
 	overflow: auto;
 }
 
+.row-buffer {
+	margin-top: 20px;
+}
 
 
